# retail-inventory-optimizer

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  step1_assessment_log.md  step3_import_runtime_fixes_summary.md  step4_unit_test_fixes_summary.md
.github/workflows/: ci.yaml
api/: __init__.py  aws_services.py  config.py  job_orchestration.py  main.py  middleware.py  pagination.py
app/: __init__.py
app/api/: __init__.py
app/etl/: __init__.py  config.py  enhanced_etl.py  etl.py  validation.py
app/forecast/: __init__.py
app/models/: __init__.py  retail_sales.py
app/optimizer/: __init__.py
data/: README.md  retail_sales_sample.csv  retail_sales_sample.parquet
docs/: DatetimeFix.md  retail_sales_er_diagram.md  retail_sales_er_diagram.puml
etl/: __init__.py  pipeline.py
forecast/: __init__.py  forecasting_service.py
optimize/: README.md  __init__.py  example_usage.py  inventory_optimizer.py  test_optimizer.py
scripts/: convert_to_parquet.py  generate_er_diagram.py  launch_local.bat  launch_local.sh  setup.py  test_data_contract.py  test_endpoints.py
test_context/expectations/: .ge_store_backend_id
test_ge_context/expectations/: .ge_store_backend_id
tests/: __init__.py  conftest.py  test_basic.py  test_integration.py  test_minimal.py  test_smoke.py  test_validation_schema.py  test_validation_system.py
tests/integration/: __init__.py
tests/load/: __init__.py
tests/unit/: __init__.py  test_etl.py  test_forecast.py  test_optimization.py
